--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 hello js rocket
 
-<script type="text/javascript"></script>
- console.log('Hello friends!');
+<script type="text/javascript"> 
+console.log('Hello friends!');
 </script>
