--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 	<div class="cool" id="cool">
 		<p> Hello Im cool</p>
+
+		<a href="rocket.html"> Go to the rocket page!</a>
+		<p>you will be directed soon</p>
+
 </body>
 </html>
 
